fix: hide mem when it overflows LANG=en_EN date +'(%a, %b %d, %Y %r)'

--- a/cssMemSlider/styles/animation.css
+++ b/cssMemSlider/styles/animation.css
@@ -6,12 +6,3 @@
         transform: translateX(0);
     }
 }
-
-@keyframes go-out {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
